# moderate-platform-api

./: .dockerignore  .env.dev.default  .env.trust  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.minio  README.md  Taskfile.yml  apisix-dev-apisix.yaml  apisix-dev-config.yaml  createdb.sh  docker-compose-dev.yml  docker-compose-tests.yml  docker-compose-trust.yml  minio-setup.sh  pyproject.toml
.github/workflows/: build-push-api.yml  build-push-gar.yml  build-push-ui.yml  test.yml
migrations/: env.py
migrations/versions/: 896f6de891a0_add_indexes_on_longrunningtask_username_.py
moderate_api/: __init__.py  auth.py  config.py  db.py  diva.py  diva_deps.py  diva_mock.py  enums.py  long_running.py  main.py  message_queue.py  object_storage.py  open_metadata.py  openapi.py  trust.py
moderate_api/authz/: __init__.py  casbin_policy_static.csv  enforcer.py  enums.py  token.py  user.py
moderate_api/entities/: crud.py  enums.py
moderate_api/entities/access_request/: models.py  router.py
moderate_api/entities/asset/: __init__.py  models.py  router.py  search.py  trust_routes.py
moderate_api/entities/job/: models.py  router.py
moderate_api/entities/user/: models.py  router.py
moderate_api/entities/visualization/: router.py
moderate_api/notebooks/: __init__.py  utils.py
moderate_api/notebooks/exploration/: notebook.py
moderate_api/notebooks/synthethic_load/: inference.py  notebook.py
moderate_api/notebooks/synthetic_load/: .gitignore  notebook.py
moderate_api/ping/: models.py  router.py
moderate_api/scripts/: reset_trust_proofs.py
moderate_api/utils/: exceptions.py  factories.py  router.py
moderate_ui/: .env  .env.production  .eslintrc.cjs  .gitignore  .prettierignore  Caddyfile  Dockerfile  README.MD  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
moderate_ui/src/: App.tsx  index.tsx  types.ts  utils.ts
moderate_ui/src/api/: assets.ts  job.ts  ping.ts  ping.tsx  types.ts  utils.ts  utils.tsx  validation.ts  visualization.ts
moderate_ui/src/auth-provider/: keycloak.ts  utils.ts
moderate_ui/src/components/: AssetObjectCard.tsx  AssetObjectDropzone.tsx  AssetObjectPicker.tsx  AssetObjectsTable.tsx  DevelopmentBanner.tsx  EllipsisButton.tsx  FooterLinks.tsx  GlobalErrorBoundary.tsx  GlobalErrorListener.tsx  HeaderMegaMenu.old.tsx  HeaderMegaMenu.tsx  KeyValuesStack.tsx  LoadingOverlayWithMessage.tsx  MatrixProfileJobHistory.tsx  NotebookContainer.tsx  RichEditor.tsx
moderate_ui/src/hooks/: index.ts  useAssetObjectDownload.ts  useAssetObjectIntegrity.ts  useAssetObjectProfile.ts  useAssetObjectValidation.ts  useGlobalErrorListener.ts  useNftMetadata.ts  useReporterStatus.ts  useVerificationCount.ts
moderate_ui/src/pages/: Catalogue.tsx  Homepage.tsx  ToolsCatalogue.tsx  login.tsx
moderate_ui/src/rest-data-provider/: index.ts
scripts/: create_dev_fixtures.py
tests/: __init__.py  conftest.py  db.py  test_access_request.py  test_asset.py  test_crud.py  test_crud_filters.py  test_diva.py  test_download_intent.py  test_job.py  test_message_queue.py  test_object_storage.py  test_ping.py  test_search.py  test_user_meta.py  utils.py
(+54 files in other folders)
