[tool.poetry]
name = "moderate_api"
version = "0.1.0"
description = "HTTP API of the MODERATE platform"
authors = ["Andres Garcia Mangas <andres.garcia@fundacionctic.org>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = { version = "^0.104.0" }
uvicorn = { extras = ["standard"], version = "^0.22.0" }
coloredlogs = "^15.0.1"
pyjwt = "^2.8.0"
httpx = "^0.25.1"
cryptography = "^41.0.5"
cachetools = "^5.3.2"
asyncache = "^0.3.1"
pydantic = "^1.10.0"
python-multipart = "^0.0.6"
itsdangerous = "^2.1.2"
ujson = "^5.8.0"
orjson = "^3.9.10"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
